--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-src/main/** linguist-document-false
-src/main/** lingusit-vendored=false
+MAC_2023/src/main/** linguist-document-false
+MAC_2023/src/main/** lingusit-vendored=false
